Add changes in html text valid invalid

--- a/index.html
+++ b/index.html
@@ -51,21 +51,21 @@
               <label for="fe">
                 <input class="input-box" type="text" name="last_name" id="fe" minlength="2" aria-label="name_lame" placeholder="Last Name"  required>
                 <div class="text">
-                  First Name cannot be empty   
+                  Password cannot be empty 
                 </div>  
               </label>    
 
               <label for="fe">
                 <input class="input-box" type="email" name="email" id="fe" aria-label="Your Email" placeholder="Email Address"  required>
                 <div class="text">
-                  First Name cannot be empty   
+                  Looks like this is not an email
                 </div>  
               </label>    
 
-              <input class="input-box" type="password" name="user-password" id="fe" min="4" aria-label="Your password" placeholder="Password"  required>
+              <input class="input-box" type="password" name="user-password" id="fe" minlength="4" aria-label="Your password" placeholder="Password"  required>
               <label for="fe">
                 <div class="text">
-                  First Name cannot be empty   
+                  Password cannot be empty 
                 </div>  
               </label>    
             
