Add new changes in html in label span

--- a/index.html
+++ b/index.html
@@ -41,32 +41,32 @@
           </h2>
 
           <form class="form" action="https://echo.htmlacademy.ru/courses" method="post" autocomplete="off">
-              <label  for="fe">
-                <input class="input-box" type="text" value="Anna" name="name" id="fe" minlength="2" aria-label="Name" placeholder="Name"  required>
-                <div class="text">
+              <label>
+                <input class="input-box" type="text" value="Anna" name="name"  minlength="2" aria-label="Name" placeholder="Name"  required>
+                <span class="text" style="display: flex;justify-content: flex-end;">
                   First Name cannot be empty   
-                </div>
+                </span>
               </label>    
             
-              <label for="fe">
-                <input class="input-box" type="text" name="last_name" id="fe" minlength="2" aria-label="name_lame" placeholder="Last Name"  required>
-                <div class="text">
+              <label>
+                <input class="input-box" type="text" name="last_name" minlength="2" aria-label="name_lame" placeholder="Last Name"  required>
+                <span class="text" style="display: flex;justify-content: flex-end;">
                   Password cannot be empty 
-                </div>  
+                </span>  
               </label>    
 
-              <label for="fe">
-                <input class="input-box" type="email" name="email" id="fe" aria-label="Your Email" placeholder="Email Address"  required>
-                <div class="text">
+              <label>
+                <input class="input-box" type="email" name="email" aria-label="Your Email" placeholder="Email Address"  required>
+                <span class="text" style="display: flex;justify-content: flex-end;">
                   Looks like this is not an email
-                </div>  
+                </span>  
               </label>    
 
-              <input class="input-box" type="password" name="user-password" id="fe" minlength="4" aria-label="Your password" placeholder="Password"  required>
-              <label for="fe">
-                <div class="text">
+              <label>
+                <input class="input-box" type="password" name="user-password"  minlength="4" aria-label="Your password" placeholder="Password"  required>
+                <span class="text" style="display: flex;justify-content: flex-end;">
                   Password cannot be empty 
-                </div>  
+                </span>  
               </label>    
             
             <button class="button" type="submit">
